--- a/tutorials/01-html/another-folder/index.html
+++ b/tutorials/01-html/another-folder/index.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tut 0</title>
+    <title>in another folder</title>
 </head>
 <body>
-    <h1>HTML TUTORIAL</h1>
-    <a href="something-else.html"> something-else</a>
-    <a href="another-folder"> Another folder</a>
+    <h1>in another folder</h1>
+    <a href=".."> HOME</a>
 </body>
 </html>
