--- a/tutorials/01-html/index.html
+++ b/tutorials/01-html/index.html
@@ -8,6 +8,9 @@
 <body>
     <h1>HTML TUTORIAL</h1>
     <a href="something-else.html"> something-else</a>
+    <br>
     <a href="another-folder"> Another folder</a>
+    <br>
+    <a href="../02-html">02-html</a>
 </body>
 </html>
