--- a/tutorials/02-html/index.html
+++ b/tutorials/02-html/index.html
@@ -21,8 +21,8 @@
             </ul>
         </nav>
         <div>
-            <img src="../../images/Momonga.jpg" alt="flying squirrel">
-            <img src="../../images/Momonga.jpg" alt="flying squirrel">
+            <img src="images/Momonga.jpg" alt="flying squirrel">
+            <img src="images/Momonga.jpg" alt="flying squirrel">
         </div>
     </header>
     <main>
