--- a/tutorials/01-html/index.html
+++ b/tutorials/01-html/index.html
@@ -11,6 +11,13 @@
     <br>
     <a href="another-folder"> Another folder</a>
     <br>
+    <br>
+    <a href="../05-css-animations/index.html">05-css-animations</a>
+    <br>
+    <a href="../04-css-transitions/index.html">04-css-transitions</a>
+    <br>
+    <a href="../03.html">03-css-essential-training</a>
+    <br>
     <a href="../02-html">02-html</a>
     <br>
     <a href="../01b-html">01b-html</a>
