--- a/portfolio-site/index.html
+++ b/portfolio-site/index.html
@@ -36,21 +36,21 @@
       <p>© 2023 by Ashanty Lemus | <a href="mailto:ashantylemus@gmail.com">ashantylemus@gmail.com</a></p>
 
       <!-- Add or remove any networks. -->
-      <ul>
+      <ul class="socials">
         <li>
-          <a href="#" target="_blank">Twitter</a>
+          <a href="#" target="_blank"><img src="images/icon-logo-twitter.png" alt="Twitter"></a>
         </li>
         <li>
-          <a href="#" target="_blank">LinkedIn</a>
+          <a href="#" target="_blank"><img src="images/icon-logo-linkedin.png" alt="LinkedIn"></a>
         </li>
         <li>
-          <a href="#" target="_blank">Facebook</a>
+          <a href="#" target="_blank"><img src="images/icon-logo-medium.png" alt="Medium"></a>
         </li>
         <li>
-          <a href="#" target="_blank">YouTube</a>
+          <a href="#" target="_blank"><img src="images/icon-logo-youtube.png" alt="YouTube"></a>
         </li>
         <li>
-          <a href="#" target="_blank">Instagram</a>
+          <a href="#" target="_blank"><img src="images/icon-logo-instagram.png" alt="Instagram"></a>
         </li>
       </ul>
       <!-- End content edits here. -->
