--- a/tutorials/01-html/index.html
+++ b/tutorials/01-html/index.html
@@ -11,6 +11,8 @@
     <br>
     <a href="another-folder"> Another folder</a>
     <br>
+        <a href="../../portfolio-site/index.html"> Portfolio Site</a>
+    <br>
         <a href="../dom/index.html">DOM DOM DOM</a>
     <br>
         <a href="../dom-imageClick/index.html">DOM-imageClick</a>
