--- a/portfolio-site/resume.html
+++ b/portfolio-site/resume.html
@@ -7,18 +7,23 @@
         <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="resume">
+    <a class="btn download-link" href="#"> Download PDF</a>
     <!-- //  INTRO  // -->
     <header>
+      <div class="content-wrapper">
       <!-- Start content edits below this line. -->
       <h1>Ashanty Lemus</h1>
       <h2>Job title or tagline</h2>
+      </div>
 
       <!-- End content edits here. -->
     </header>
+    <main class="content-wrapper">
+    </main>
 
     <main>
       <!-- //  PROFILE  // -->
-      <section>
+      <section class="resume-section">
         <!-- Start content edits below this line. -->
         <h2>Profile</h2>
         <p>Add your resume summary/profile here. Add more paragraphs or links as needed.</p>
@@ -28,13 +33,13 @@
       </section>
 
       <!-- //  PROJECTS  // -->
-      <section>
+      <section class="resume-section">
         <!-- Start content edits below this line. -->
         <h2>Projects</h2>
         <p>Optional paragraph for the Projects summary. Delete if not being used.</p>
 
         <!-- To add more items, copy this whole <section></section> block-->
-        <section>
+        <section class="project-item">
           <img src="images/Screenshot 2025-03-22 220452.png" srcset="" alt="Coded BMO" width="" height="">
           <h3>Code BMO</h3>
           <p>This was my first experience creating a character through coding. Although it's a relatively simple piece of code, I had a great time bringing this famous character to life and experimenting with coding in this way.</p>
@@ -44,7 +49,7 @@
           <a href="#" target="_blank">Another link</a>
         </section>
 
-        <section>
+        <section class="project-item">
           <img src="images/ex1thumbnail.png" srcset="" alt="Coded Snoopy" width="" height="">
           <h3>Snoopy</h3>
           <p>I won't say this was entirely my first time working with code and creating a website because it isn't. However, it was challenging to create one again since the last time I built a website was back in high school, around four years ago. Additionally, making the rollover or clickable regions was just as difficult because this was the first time I had manipulated code in this way. There was so much to learn in just a few days of being in class Art 101, and my brain struggled to keep up. Nevertheless, with a little help, I created a decent code that I am quite proud of.
@@ -59,7 +64,7 @@
       </section>
 
       <!-- //  WORK EXPERIENCE  // -->
-      <section>
+      <section class="resume-section">
         <!-- Start content edits below this line.  -->
         <h2>Work Experience</h2>
         <p>Optional paragraph for work experience summary. Not a part of the job details. Delete if not being used.</p>
@@ -83,7 +88,7 @@
       </section>
 
       <!-- //  EDUCATION & CERTIFICATIONS  // -->
-      <section>
+      <section class="resume-section">
         <!-- Start content edits below this line.  -->
         <h2>Education</h2>
 
