--- a/portfolio-site/index.html
+++ b/portfolio-site/index.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>About Me | Ashanty Lemus</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css">
 
   </head>
   <body class="home">
     <!-- //  INTRO  // -->
      <div class="content-wrapper">
+      <div class="content-bg">
+
 
     <header>
       <!-- Start content edits below this line. -->
@@ -28,6 +33,7 @@
 
       <!-- End content edits here. -->
     </main>
+     </div>
      </div>
 
     <!-- //  FOOTER INFO, SOCIAL MEDIA  // -->
