--- a/portfolio-site/resume.html
+++ b/portfolio-site/resume.html
@@ -16,6 +16,7 @@
       <div class="content-wrapper">
       <!-- Start content edits below this line. -->
       <h1>Ashanty Lemus</h1>
+      <br>
       <h2>Job title or tagline</h2>
       </div>
 
@@ -48,7 +49,7 @@
           <h3>Code BMO</h3>
           <p>This was my first experience creating a character through coding. Although it's a relatively simple piece of code, I had a great time bringing this famous character to life and experimenting with coding in this way.</p>
           <!-- link to project -->
-          <a href="https://lethe-design.github.io/BFA-Portolio-AshantyLemus/p5_code/ex1_/index.html" target="_blank">Link</a>
+          <a class="btn" href="https://lethe-design.github.io/BFA-Portolio-AshantyLemus/p5_code/ex1_/index.html" target="_blank">Link</a>
           <!-- additional links, e.g. newsletter -->
           <a href="#" target="_blank">Another link</a>
         </section>
