--- a/portfolio-site/resume.html
+++ b/portfolio-site/resume.html
@@ -51,7 +51,7 @@
           <!-- link to project -->
           <a class="btn" href="https://lethe-design.github.io/BFA-Portolio-AshantyLemus/p5_code/ex1_/index.html" target="_blank">Link</a>
           <!-- additional links, e.g. newsletter -->
-          <a href="#" target="_blank">Another link</a>
+          <a class="btn" href="#" target="_blank">Another link</a>
         </section>
 
         <section class="project-item">
@@ -62,7 +62,7 @@
           <!-- link to project -->
           <a class="btn" href="https://lethe-design.github.io/BFA-Portolio-AshantyLemus/p5_code/project1_/index.html" target="_blank">Link</a>
           <!-- additional links, e.g. newsletter -->
-          <a href="#" target="_blank">Another link</a>
+          <a class="btn" href="#" target="_blank">Another link</a>
         </section>
         
         <!-- End content edits here. -->
