--- a/tutorials/01-html/index.html
+++ b/tutorials/01-html/index.html
@@ -9,6 +9,8 @@
     <h1>HTML TUTORIAL</h1>
     <a href="something-else.html"> something-else</a>
     <br>
+    <a href="../../NetArt-Project/index.html">NetArt-Project</a>
+    <br>
     <a href="another-folder"> Another folder</a>
     <br>
         <a href="../../portfolio-site/index.html"> Portfolio Site</a>
