--- a/NetArt-Project/index.html
+++ b/NetArt-Project/index.html
@@ -54,7 +54,7 @@
   
   <div class="selectors">
     <div>
-      <label for="safari">Select Safari:</label>
+      <label for="safari">Safari:</label>
       <select id="safari" name="safari">
         <option value="">...</option>
         <option value="De Young Museum">De Young Museum</option>
@@ -76,7 +76,7 @@
     </div>
 
     <div>
-      <label for="tiktok">Select Tiktok:</label>
+      <label for="tiktok">Tiktok:</label>
       <select id="tiktok" name="tiktok">
         <option value="">...</option>
         <option value="Adept">Adept</option>
