--- a/portfolio-site - responsive-menu/index.html
+++ b/portfolio-site - responsive-menu/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>About Me | Ashanty Lemus</title>
+    <title>Ashanty Lemus | Digital Artist</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
@@ -11,6 +11,23 @@
 
   </head>
   <body class="home">
+
+    <nav class="navbar">
+        <div class="logo">
+            <a href="#">Ashanty Lemus</a>
+        </div>
+        <ul class="nav-links">
+            <li><a href="#" class="active">Home</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="resume.html">Resume</a></li>
+        </ul>
+        <div class="menu-toggle">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </div>
+    </nav>
+
     <!-- //  INTRO  // -->
      <div class="content-wrapper">
       <div class="content-bg">
@@ -20,7 +37,7 @@
       <!-- Start content edits below this line. -->
       <h1>Ashanty Lemus</h1>
       <br>
-      <h2>Job title or tagline</h2>
+      <h2>Digital Artist</h2>
 
       <!-- End content edits here. -->
     </header>
@@ -29,6 +46,7 @@
     <main>
       <!-- Start content edits below this line. -->
       <p>I currently live in the Bay Area, where I am completing my bachelor's degree in digital media art at San Jose State University. I plan to graduate in the spring of 2026. I specialize in various arts, including traditional, digital, video, and coding. Each piece of art I create is inspired by different experiences, whether walking outside, attending class, or talking to a friend. <br>
+        <br>
         Growing up, creating art was never my dream career; I initially wanted to become a kindergarten teacher. However, everything changed when a friend began complimenting another person's artwork. Feeling envious, I started drawing repeatedly, hoping to create the perfect piece to earn me similar compliments. I know that makes me sound selfish, but it was a goal I wanted to reach. Ultimately, I gave up on that goal because I realized I wanted to draw for myself. I aspired to create art like an animator and bring my work to life. This exploration led me to discover a talent I never knew I had, prompting me to change my career path and focus on art, still wanting to make my creations come alive.</p>
       <p>To learn more about my work history, check out my <a href="resume.html"> resume</a>. Thanks for stopping by!</p>
 
@@ -62,5 +80,7 @@
       </ul>
       <!-- End content edits here. -->
     </footer>
+
+    <script src="js/main.js"></script>
   </body>
 </html>
