--- a/portfolio-site - responsive-menu/projects.html
+++ b/portfolio-site - responsive-menu/projects.html
@@ -4,50 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Resume | Ashanty Lemus</title>
-    <meta name="description" content="Ashanty Lemus is a digital artist working in web design, illustration, and 3d modeling.">
-    <meta name="keywords" content="Ashanty Lemus, Digital Artist, 3d modeler.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="resume">
-    <a class="btn download-link" href="#"> Download PDF</a>
+    <!-- <a class="btn download-link" href="#"> Download PDF</a> -->
     <!-- //  INTRO  // -->
+
+    <nav class="navbar">
+        <div class="logo">
+            <a href="index.html">Ashanty Lemus</a>
+        </div>
+        <ul class="nav-links">
+            <li><a href="index.html" >Home</a></li>
+            <li><a href="#" class="active">Projects</a></li>
+            <li><a href="resume.html">Resume</a></li>
+        </ul>
+        <div class="menu-toggle">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </div>
+    </nav>
+
     <header>
       <div class="content-wrapper">
       <!-- Start content edits below this line. -->
       <h1>Ashanty Lemus</h1>
       <br>
-      <h2>Job title or tagline</h2>
+      <h2>Digital Artist</h2>
       </div>
 
-      <!-- End content edits here. -->
-    </header>
-    <main class="content-wrapper">
-    </main>
-
     <main>
-      <!-- //  PROFILE  // -->
-      <section class="resume-section">
-        <!-- Start content edits below this line. -->
-        <h2>Profile</h2>
-        <p>Add your resume summary/profile here. Add more paragraphs or links as needed.</p>
-        <a href="index.html">Back to homepage</a>
-
-        <!-- End content edits here. -->
-      </section>
 
       <!-- //  PROJECTS  // -->
       <section class="resume-section">
         <!-- Start content edits below this line. -->
         <h2>Projects</h2>
-        <p>Optional paragraph for the Projects summary. Delete if not being used.</p>
-
         <div class="project-wrapper">
         <!-- To add more items, copy this whole <section></section> block-->
         <section class="project-item">
-          <img src="images/Screenshot 2025-03-22 220452.png" srcset="" alt="Coded BMO by Ashanty Lemus" width="" height="">
+          <img src="images/Screenshot 2025-03-22 220452.png" srcset="" alt="Coded BMO" width="" height="">
           <h3>Code BMO</h3>
           <p>This was my first experience creating a character through coding. Although it's a relatively simple piece of code, I had a great time bringing this famous character to life and experimenting with coding in this way.</p>
           <!-- link to project -->
@@ -70,51 +69,6 @@
         <!-- End content edits here. -->
          </div>
       </section>
-
-      <!-- //  WORK EXPERIENCE  // -->
-      <section class="resume-section">
-        <!-- Start content edits below this line.  -->
-        <h2>Work Experience</h2>
-        <p>Optional paragraph for work experience summary. Not a part of the job details. Delete if not being used.</p>
-
-        <!-- To add more items, copy this whole <section></section> block -->
-        <section class="work-item">
-          <div class="work-details">
-          <h3>Job title</h3>
-          <p>Company Name</p>
-          <p>Date at job</p>
-        </div>
-
-        <div class="work-summary">
-          <p>Job summary goes here. Add as many paragraphs as you need.</p>
-          <p>Optional list:</p>
-          <ul>
-            <li>Delete this list if you don't need it.</li>
-            <li>Created...</li>
-            <li>Lead...</li>
-            <li>Responsible for...</li>
-          </ul>
-          </div>
-        </section>
-
-        <!-- End content edits here. -->
-      </section>
-
-      <!-- //  EDUCATION & CERTIFICATIONS  // -->
-      <section class="resume-section">
-        <!-- Start content edits below this line.  -->
-        <h2>Education</h2>
-
-        <!-- To add more items, copy this whole <section></section> block -->
-        <section class="education-item">
-          <h3>School name - City</h3>
-          <p>Designation received or program name, year attended</p>
-          <p>Summary or accomplishments.</p>
-        </section>
-
-        <!-- End content edits here. -->
-      </section>
-    </main>
 
     <!-- //  FOOTER INFO, SOCIAL MEDIA  // -->
     <footer>
@@ -142,5 +96,8 @@
       
       <!-- End content edits here. -->
     </footer>
+
+
+    <script src="js/main.js"></script>
   </body>
 </html>
