--- a/portfolio-site - responsive-menu/resume.html
+++ b/portfolio-site - responsive-menu/resume.html
@@ -10,14 +10,31 @@
         <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="resume">
-    <a class="btn download-link" href="#"> Download PDF</a>
+    <!-- <a class="btn download-link" href="#"> Download PDF</a> -->
     <!-- //  INTRO  // -->
+
+    <nav class="navbar">
+        <div class="logo">
+            <a href="index.html">Ashanty Lemus</a>
+        </div>
+        <ul class="nav-links">
+            <li><a href="index.html" >Home</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="#" class="active">Resume</a></li>
+        </ul>
+        <div class="menu-toggle">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </div>
+    </nav>
+
     <header>
       <div class="content-wrapper">
       <!-- Start content edits below this line. -->
       <h1>Ashanty Lemus</h1>
       <br>
-      <h2>Job title or tagline</h2>
+      <h2>Digital artist</h2>
       </div>
 
       <!-- End content edits here. -->
@@ -34,39 +51,6 @@
         <a href="index.html">Back to homepage</a>
 
         <!-- End content edits here. -->
-      </section>
-
-      <!-- //  PROJECTS  // -->
-      <section class="resume-section">
-        <!-- Start content edits below this line. -->
-        <h2>Projects</h2>
-        <p>Optional paragraph for the Projects summary. Delete if not being used.</p>
-
-        <div class="project-wrapper">
-        <!-- To add more items, copy this whole <section></section> block-->
-        <section class="project-item">
-          <img src="images/Screenshot 2025-03-22 220452.png" srcset="" alt="Coded BMO" width="" height="">
-          <h3>Code BMO</h3>
-          <p>This was my first experience creating a character through coding. Although it's a relatively simple piece of code, I had a great time bringing this famous character to life and experimenting with coding in this way.</p>
-          <!-- link to project -->
-          <a class="btn" href="https://lethe-design.github.io/BFA-Portolio-AshantyLemus/p5_code/ex1_/index.html" target="_blank">Link</a>
-          <!-- additional links, e.g. newsletter -->
-          <a class="btn" href="#" target="_blank">Another link</a>
-        </section>
-
-        <section class="project-item">
-          <img src="images/ex1thumbnail.png" srcset="" alt="Coded Snoopy" width="" height="">
-          <h3>Snoopy</h3>
-          <p>I won't say this was entirely my first time working with code and creating a website because it isn't. However, it was challenging to create one again since the last time I built a website was back in high school, around four years ago. Additionally, making the rollover or clickable regions was just as difficult because this was the first time I had manipulated code in this way. There was so much to learn in just a few days of being in class Art 101, and my brain struggled to keep up. Nevertheless, with a little help, I created a decent code that I am quite proud of.
-          <br>And if you were curious as to where my clickable regions are, check at these 5 places and you'll find it.</p>
-          <!-- link to project -->
-          <a class="btn" href="https://lethe-design.github.io/BFA-Portolio-AshantyLemus/p5_code/project1_/index.html" target="_blank">Link</a>
-          <!-- additional links, e.g. newsletter -->
-          <a class="btn" href="#" target="_blank">Another link</a>
-        </section>
-        
-        <!-- End content edits here. -->
-         </div>
       </section>
 
       <!-- //  WORK EXPERIENCE  // -->
@@ -140,5 +124,8 @@
       
       <!-- End content edits here. -->
     </footer>
+
+
+    <script src="js/main.js"></script>
   </body>
 </html>
