--- a/portfolio-site/index.html
+++ b/portfolio-site/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>About Me | Ashanty Lemus</title>
+    <title>Ashanty Lemus | Digital Artist</title>
+    <meta name="description" content="Ashanty Lemus is a digital artist working in web design, illustration, and 3d modeling.">
+    <meta name="keywords" content="Ashanty Lemus, Digital Artist, 3d modeler.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
