--- a/tutorials/01-html/index.html
+++ b/tutorials/01-html/index.html
@@ -13,6 +13,8 @@
     <br>
     <a href="another-folder"> Another folder</a>
     <br>
+        <a href="../../portfolio-site - responsive-menu/index.html"> Portfolio Site - Responsive-Menu</a>
+    <br>
         <a href="../../portfolio-site/index.html"> Portfolio Site</a>
     <br>
         <a href="../dom/index.html">DOM DOM DOM</a>
