--- a/portfolio-site - responsive-menu/projects.html
+++ b/portfolio-site - responsive-menu/projects.html
@@ -42,7 +42,7 @@
       <!-- //  PROJECTS  // -->
       <section class="resume-section">
         <!-- Start content edits below this line. -->
-        <h2>Projects</h2>
+        <h2>Coding Projects</h2>
         <div class="project-wrapper">
         <!-- To add more items, copy this whole <section></section> block-->
         <section class="project-item">
@@ -51,8 +51,6 @@
           <p>This was my first experience creating a character through coding. Although it's a relatively simple piece of code, I had a great time bringing this famous character to life and experimenting with coding in this way.</p>
           <!-- link to project -->
           <a class="btn" href="https://lethe-design.github.io/BFA-Portolio-AshantyLemus/p5_code/ex1_/index.html" target="_blank">Link</a>
-          <!-- additional links, e.g. newsletter -->
-          <a class="btn" href="#" target="_blank">Another link</a>
         </section>
 
         <section class="project-item">
@@ -62,10 +60,57 @@
           <br>And if you were curious as to where my clickable regions are, check at these 5 places and you'll find it.</p>
           <!-- link to project -->
           <a class="btn" href="https://lethe-design.github.io/BFA-Portolio-AshantyLemus/p5_code/project1_/index.html" target="_blank">Link</a>
-          <!-- additional links, e.g. newsletter -->
-          <a class="btn" href="#" target="_blank">Another link</a>
+        </section>
+
+        <!-- //  PROJECTS  // -->
+      <section class="resume-section">
+        <!-- Start content edits below this line. -->
+        <h2>Traditional Art</h2>
+        <h4>This section highlights my original hand-drawn artwork, created with a pencil, chalk, an eraser, and a blending stump. Each piece reflects my artistic journey, which can take anywhere from a week for detailed works to just a few minutes for quick inspirations. I invite you to explore the range of creativity in my drawings.</h4>
+        <div class="project-wrapper">
+        <!-- To add more items, copy this whole <section></section> block-->
+        <section class="project-item">
+          <img src="images/Screenshot 2025-10-22 224156.png" srcset="" alt="Melanie Martinez" width="" height="">
+          <h3>Melanie Martinez</h3>
+          <!-- link to project -->
+          <a class="btn" href="https://lethe-design.github.io/BFA-Portolio-AshantyLemus/images/Melanie%20Art.jpg" target="_blank">Link</a>
+        </section>
+
+        <section class="project-item">
+          <img src="images/Screenshot 2025-10-22 224244.png" srcset="" alt="Materials" width="" height="">
+          <h3>Materials</h3>
+          <!-- link to project -->
+          <a class="btn" href="https://lethe-design.github.io/BFA-Portolio-AshantyLemus/images/Circle.jpg" target="_blank">Link</a>
+        </section>
+
+        <section class="project-item">
+          <img src="images/Screenshot 2025-10-22 224314.png" srcset="" alt="Rest Point" width="" height="">
+          <h3>Rest Point</h3>
+          <!-- link to project -->
+          <a class="btn" href="https://lethe-design.github.io/BFA-Portolio-AshantyLemus/images/room.jpg" target="_blank">Link</a>
         </section>
         
+
+        <section class="resume-section">
+        <!-- Start content edits below this line. -->
+        <h2>Video Art</h2>
+        <div class="project-wrapper">
+        <!-- To add more items, copy this whole <section></section> block-->
+        <section class="project-item">
+          <img src="video/audiovisual.mp4" srcset="" alt="Audiovisual" width="" height="">
+          <h3>Audiovisual</h3>
+          <p>This video outlines my techniques for manipulating light and the environment to enhance the eerie atmosphere of the video using Adobe After Effects. I had one goal in mind: to change the lighting in order to create a more unsettling mood. Initially, I wasn't sure how to achieve this, so I started using the search bar in Adobe After Effects and experimented with various effects until I found one that worked well. And I was pleased with the results!</p>
+          <!-- link to project -->
+          <a class="btn" href="https://lethe-design.github.io/BFA-Portolio-AshantyLemus/p5_code/ex1_/index.html" target="_blank">Link</a>
+        </section>
+
+        <section class="project-item">
+          <video src="video/Raindow.mp4" srcset="" alt="Raindow" width="" height="">
+          <h3>Raindow</h3>
+          <p>In this second video, I focused on manipulating two different code elements—parametric equations and snowflakes—from a website called 'p5.js,' which was recommended to me by two of my teachers. Originally, this was meant to be an assignment for my class; however, because I found it visually appealing, I decided to use it for this project. Fortunately, coding it didn't take long. I simply combined the two codes and created an 'if-else' statement to synchronize their tones after a few seconds.</p>
+          <!-- link to project -->
+          <a class="btn" href="https://lethe-design.github.io/BFA-Portolio-AshantyLemus/p5_code/project1_/index.html" target="_blank">Link</a>
+        </section>
         <!-- End content edits here. -->
          </div>
       </section>
