--- a/portfolio-site - responsive-menu/resume.html
+++ b/portfolio-site - responsive-menu/resume.html
@@ -34,7 +34,7 @@
       <!-- Start content edits below this line. -->
       <h1>Ashanty Lemus</h1>
       <br>
-      <h2>Digital artist</h2>
+      <h2>Digital Artist</h2>
       </div>
 
       <!-- End content edits here. -->
