--- a/portfolio-site - responsive-menu/resume.html
+++ b/portfolio-site - responsive-menu/resume.html
@@ -47,7 +47,10 @@
       <section class="resume-section">
         <!-- Start content edits below this line. -->
         <h2>Profile</h2>
-        <p>Add your resume summary/profile here. Add more paragraphs or links as needed.</p>
+        <p>Customer service professional with a strong foundation in retail operations and a focus on enhancing customer satisfaction
+        through effective communication and teamwork. Demonstrates proficiency in managing transactions, inventory, and customer
+        relations, leveraging attention to detail and problem-solving skills to streamline processes and improve service delivery.
+        Committed to fostering a welcoming environment and pursuing continuous improvement in customer engagement.</p>        
         <a href="index.html">Back to homepage</a>
 
         <!-- End content edits here. -->
@@ -57,28 +60,71 @@
       <section class="resume-section">
         <!-- Start content edits below this line.  -->
         <h2>Work Experience</h2>
-        <p>Optional paragraph for work experience summary. Not a part of the job details. Delete if not being used.</p>
-
         <!-- To add more items, copy this whole <section></section> block -->
-        <section class="work-item">
-          <div class="work-details">
-          <h3>Job title</h3>
-          <p>Company Name</p>
-          <p>Date at job</p>
+         <div class="work-details">
+          <h3>CASHIER</h3>
+          <p>Ross</p>
+          <p>Mar 2025 - Present</p>
+          <p>San Jose</p>
         </div>
 
         <div class="work-summary">
-          <p>Job summary goes here. Add as many paragraphs as you need.</p>
-          <p>Optional list:</p>
           <ul>
-            <li>Delete this list if you don't need it.</li>
-            <li>Created...</li>
-            <li>Lead...</li>
-            <li>Responsible for...</li>
+            <li>Processed customer transactions efficiently, contributing to a seamless checkout experience and enhancing overall client satisfaction.</li>
+            <li>Assisted customers with inquiries and product selections, fostering a welcoming environment and strengthening customer loyalty.</li>
+            <li>Worked closely with team members to implement promotional displays, increasing product visibility and driving noticeable sales growth.</li>
           </ul>
           </div>
         </section>
 
+        <div class="work-details">
+          <h3>PHARMACY CUSTOMER SERVICE ASSOCIATE</h3>
+          <p>Walgreens</p>
+          <p>Oct 2024 - Mar 2025</p>
+          <p>Santa Clara</p>
+        </div>
+
+        <div class="work-summary">
+          <ul>
+            <li>Assist customers with prescriptions, enhancing satisfaction through attentive service.</li>
+            <li>Process transactions efficiently, ensuring accurate billing and inventory management.</li>
+            <li>Collaborate with the pharmacy team to streamline operations, improving workflow.</li>
+          </ul>
+          </div>
+        </section>
+        
+
+         <div class="work-details">
+          <h3> SEASONAL CASHIER</h3>
+          <p>Khols</p>
+          <p>Sep 2024 - Dec 2024</p>
+          <p>San Jose</p>
+        </div>
+
+        <div class="work-summary">
+          <ul>
+            <li>Operated cash register and accurately processed payments, returns, and exchanges.</li>
+            <li>Maintained the cleanliness of the checkout area by cleaning counters and shelves.</li>
+            <li>Streamlined payment processes, enhancing customer satisfaction, and reducing transaction times for a smoother shopping experience.</li>
+          </ul>
+          </div>
+        </section>
+
+         <div class="work-details">
+          <h3>PHARMACY CUSTOMER SERVICE ASSOCIATE</h3>
+          <p>Walmart</p>
+          <p>Nov 2023 - Aug 2024</p>
+          <p>Visalia</p>
+        </div>
+
+        <div class="work-summary">
+          <ul>
+            <li>Maintained accurate records of orders, returns, exchanges, and payments.</li>
+            <li>Analyzed consumer feedback data ot understand customer needs better.</li>
+            <li>Coordinated with vendors to ensure timely deliveries of products.</li>
+          </ul>
+          </div>
+        </section>
         <!-- End content edits here. -->
       </section>
 
@@ -89,9 +135,18 @@
 
         <!-- To add more items, copy this whole <section></section> block -->
         <section class="education-item">
-          <h3>School name - City</h3>
-          <p>Designation received or program name, year attended</p>
-          <p>Summary or accomplishments.</p>
+          <h3>San Jose State University - San Jose</h3>
+          <p>BACHELOR'S DEGREEE IN DMA, Aug 2024 - Present</p>
+        </section>
+
+        <section class="education-item">
+          <h3>College of the Sequoias - Visalia</h3>
+          <p>ASSOCIATE DEGREE OF STUDIO ARTS, Jun 2023 - Jun 2024</p>
+        </section>
+
+        <section class="education-item">
+          <h3>James C. Enochs High School - Modesto</h3>
+          <p>HIGH SCHOOL DIPLOMA, Aug 2018 - May 2022</p>
         </section>
 
         <!-- End content edits here. -->
