--- a/portfolio-site - responsive-menu/projects.html
+++ b/portfolio-site - responsive-menu/projects.html
@@ -97,20 +97,42 @@
         <div class="project-wrapper">
         <!-- To add more items, copy this whole <section></section> block-->
         <section class="project-item">
-          <img src="video/audiovisual.mp4" srcset="" alt="Audiovisual" width="" height="">
+          <video src="video/audiovisual.mp4" width="600" controls></video>
           <h3>Audiovisual</h3>
           <p>This video outlines my techniques for manipulating light and the environment to enhance the eerie atmosphere of the video using Adobe After Effects. I had one goal in mind: to change the lighting in order to create a more unsettling mood. Initially, I wasn't sure how to achieve this, so I started using the search bar in Adobe After Effects and experimented with various effects until I found one that worked well. And I was pleased with the results!</p>
           <!-- link to project -->
-          <a class="btn" href="https://lethe-design.github.io/BFA-Portolio-AshantyLemus/p5_code/ex1_/index.html" target="_blank">Link</a>
         </section>
 
         <section class="project-item">
-          <video src="video/Raindow.mp4" srcset="" alt="Raindow" width="" height="">
+          <video src="video/Raindow.mp4" width="600" controls></video>
           <h3>Raindow</h3>
           <p>In this second video, I focused on manipulating two different code elements—parametric equations and snowflakes—from a website called 'p5.js,' which was recommended to me by two of my teachers. Originally, this was meant to be an assignment for my class; however, because I found it visually appealing, I decided to use it for this project. Fortunately, coding it didn't take long. I simply combined the two codes and created an 'if-else' statement to synchronize their tones after a few seconds.</p>
           <!-- link to project -->
-          <a class="btn" href="https://lethe-design.github.io/BFA-Portolio-AshantyLemus/p5_code/project1_/index.html" target="_blank">Link</a>
         </section>
+
+        <section class="resume-section">
+        <!-- Start content edits below this line. -->
+        <h2>Sculpture</h2>
+        <div class="project-wrapper">
+        <!-- To add more items, copy this whole <section></section> block-->
+        <section class="project-item">
+          <img src="images/Screenshot 2025-10-22 231227.png" srcset="" alt="Monster House" width="" height="">
+          <h3>Monster House</h3>
+          <p>This metal symbolizes my story of a dysfunctional household that I lived in not long ago, until I decided to run away because I could no longer endure it. I felt as if I was losing myself. There were many nights when the world felt overwhelmingly dark, and I wished that I would never wake up again. The barred windows, doors and garage represent the prison I was trapped in. As a child, I was never allowed to play outside or interact with other kids in the neighborhood, not even in my own backyard. I was always forced to stay in my room, playing with my dolls. The cracks in the house symbolize the anger my parents felt while I was under their care. They would create holes or cracks in the walls when they yelled at me if I didn't meet their demands. The neglected plant in front of the house reflects how the home was falling apart.</p>
+          <p>Crows, often seen perched nearby, represent the darkness that enveloped my home. They serve as a reminder of the ominous atmosphere and the foreboding experiences I endured. Their presence symbolizes the weight of sorrow and the haunting memories that linger, echoing the pain and turmoil of my childhood.</p>
+          <!-- link to project -->
+          <a class="btn" href="https://lethe-design.github.io/BFA-Portolio-AshantyLemus/images/house.jpg" target="_blank">Link</a>
+        </section>
+
+        <section class="project-item">
+          <video src="video/Fire.mp4" width="600" controls></video>
+          <h3>Scorching Truth</h3>
+          <p>For the ‘Luck of the Draw’ project, I drew the topic of fire, which I found to be an engaging and manageable subject. At first, I considered focusing on the recent wildfires in Los Angeles, as they have been prominently featured in the news. However, I decided to take a broader approach by exploring the concept of fire in general.</p>
+          <p>In my project, I present a variety of articles that discuss the different causes of fire, such as gender reveal, drought, and arson, as well as provide valuable prevention tips to help reduce the risk of fire spreading. I aim to create a comprehensive resource that not only informs viewers about the origins of fires but also educates them on effective safety protocols.</p>
+        <p>To further enhance my project, I plan to conduct a controlled fire demonstration. This will allow me to visually illustrate the potential hazards and the rapid destruction that fire can cause to homes and communities. Through this hands-on approach, I hope to underscore the importance of fire safety measures and encourage responsible behavior when it comes to fire management. My overall goal is to leave viewers with a deeper understanding of fire's impact and how they can protect themselves and their properties.</p>
+          <!-- link to project -->
+        </section>
+
         <!-- End content edits here. -->
          </div>
       </section>
