--- a/portfolio-site - responsive-menu/resume.html
+++ b/portfolio-site - responsive-menu/resume.html
@@ -111,7 +111,7 @@
         </section>
 
          <div class="work-details">
-          <h3>PHARMACY CUSTOMER SERVICE ASSOCIATE</h3>
+          <h3>ONLINE PERSONAL SHOPPER</h3>
           <p>Walmart</p>
           <p>Nov 2023 - Aug 2024</p>
           <p>Visalia</p>
