--- a/portfolio-site/index.html
+++ b/portfolio-site/index.html
@@ -10,6 +10,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css">
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.11.10/lib/p5.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.11.10/lib/addons/p5.sound.min.js"></script>
 
   </head>
   <body class="home">
@@ -64,5 +66,7 @@
       </ul>
       <!-- End content edits here. -->
     </footer>
+
+    <script src="js/sketch.js"></script>
   </body>
 </html>
