--- a/tutorials/01-html/index.html
+++ b/tutorials/01-html/index.html
@@ -31,5 +31,7 @@
     <br>
     <a href="../01b-html">01b-html</a>
     <br>
+    <a href="../../three-00-starter/index.html">3-00-Starter</a>
+    <br>
 </body>
 </html>
