--- a/tutorials/node-drawing-app/index.html
+++ b/tutorials/node-drawing-app/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <script src="libraries/p5.js"></script>
-    <script src="libraries/addons/p5.sound.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <meta charset="utf-8" />
+    <meta charset="UTF-8">
+    <title>Sockets_CodingRainbow</title>
+    <script src="libraries/p5.js" type="text/javascript"></script>
 
-  </head>
-  <body>
-    <main>
-    </main>
-    <script src="sketch.js"></script>
-  </body>
+    <script src="libraries/p5.dom.js" type="text/javascript"></script>
+    <script src="libraries/p5.sound.min.js" type="text/javascript"></script>
+    <script srq="https://cdn.socket.io/socket.io-1.4.5.js"></script>
+    <script src="sketch.js" type="text/javascript"></script>
+
+</head>
+<body>
+
+</body>
 </html>
