--- a/tutorials/01-html/index.html
+++ b/tutorials/01-html/index.html
@@ -33,5 +33,7 @@
     <br>
     <a href="../../three-00-starter/index.html">3-00-Starter</a>
     <br>
+    <a href="../Github-Copilot/index.htm">Github-Copilot</a>
+    <br>
 </body>
 </html>
