--- a/tutorials/01-html/index.html
+++ b/tutorials/01-html/index.html
@@ -35,5 +35,7 @@
     <br>
     <a href="../Github-Copilot/index.htm">Github-Copilot</a>
     <br>
+    <a href="../../Project4-MiniEssay/about.htm">Project 4 - Mini Essay</a>
+    <br>
 </body>
 </html>
