--- a/tutorials/01-html/index.html
+++ b/tutorials/01-html/index.html
@@ -35,7 +35,7 @@
     <br>
     <a href="../Github-Copilot/index.htm">Github-Copilot</a>
     <br>
-    <a href="../../Project4Essay/index.html">Project 4 - Mini Essay</a>
+    <a href="../../Project4Essay/index.html">Project 4 Mini Essay</a>
     <br>
 </body>
 </html>
