--- a/tutorials/01-html/index.html
+++ b/tutorials/01-html/index.html
@@ -37,5 +37,6 @@
     <br>
     <a href="../../Project4Essay/index.html">Project 4 Mini Essay</a>
     <br>
+    <a href="../../Scary-Game/index.html">Scary-Game</a>
 </body>
 </html>
