--- a/tutorials/01-html/index.html
+++ b/tutorials/01-html/index.html
@@ -38,5 +38,7 @@
     <a href="../../Project4Essay/index.html">Project 4 Mini Essay</a>
     <br>
     <a href="../../Scary-Game/index.html">Scary-Game</a>
+    <br>
+    <a href="../../Sound-Media/index.html">Sound-Media</a>
 </body>
 </html>
