--- a/Sound-Media/index.html
+++ b/Sound-Media/index.html
@@ -9,6 +9,9 @@
     <header>
         <p>W E B A U D I O</p>
         <button id="play-button">Click to play music</button>
+        <button id="pause-button">Pause</button>
+        <label for="volume-slider">Volume: <span id="volume-label">100%</span></label>
+        <input type="range" id="volume-slider" min="0" max="1" step="0.01" value="1">
     </header>
 
     <audio id="song" src="assets/groovy-vibe-427121.mp3"></audio>
